Update SEO comments in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" href="src/styles/index.css" />
 	<link rel="stylesheet" href="src/styles/style.css" />
-	<!--SEO Junk-->
+	<!--SEO Junk lmao-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<link rel="shortcut icon" href="/assets/icons/favicon.png" type="image/x-icon" />
 	<title>Hollow Guessr</title>
@@ -23,7 +23,7 @@
 	<meta name="twitter:description"
 		content="Guess the locations in Hallownest with Hollow Guessr, a fan-made Hollow Knight GeoGuessr clone." />
 	<meta name="twitter:image" content="/images/social-preview.png" />
-	<!--End of SEO Junk-->
+	<!--End of SEO Junk oaml-->
 
 	<script src="https://www.gstatic.com/firebasejs/11.0.0/firebase-app-compat.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/11.0.0/firebase-database-compat.js"></script>
